Fixed Incorrect Link to Images in company view Fixed Incorrectly adding request type to website Link Fixed Image Upload for Company Edit Fixed Image being too close to details in single item views Fixed Company Factory to use correct location for default logos

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -10917,6 +10917,7 @@ h2 {
   padding: 2rem;
   display: grid;
   justify-items: center;
+  gap: 2rem;
 }
 .card-big dl {
   display: grid;
