--- a/resources/scss/modules/_card-big.scss
+++ b/resources/scss/modules/_card-big.scss
@@ -24,7 +24,8 @@
     padding: 2rem;
     display: grid;
     justify-items: center;
-    
+    gap: 2rem;
+
     dl {
         display: grid;
         grid-template-columns: max-content 1fr;
